--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.7.0",
     "sass": "^1.89.2"
   },
