--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-paginate": "^8.3.0",
     "react-range": "^1.10.0",
     "react-router-dom": "^7.7.0",
     "sass": "^1.89.2"
